# imc-prosperity-4-backtester

./: README.md  pyproject.toml  test_aggressive.py
prosperity4bt/: __main__.py  data.py  datamodel.py  file_reader.py  runner.py
