[project]
name = "prosperity4bt"
description = "Backtester for IMC Prosperity 4 algorithms"
version = "0.0.0"
requires-python = ">= 3.9"
dependencies = [
    "ipython>=8.18.1",
    "jsonpickle>=4.0.2",
    "orjson>=3.10.15",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prosperity4bt.datamodel"
ignore_errors = true
